--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 		"fastify": "^5.6.1",
 		"mongoose": "^8.19.2",
 		"nodefling": "^1.0.0",
+		"pino": "^10.1.0",
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.2",
-		"lefthook": "^2.0.2"
+		"lefthook": "^2.0.2",
+		"pino-pretty": "^13.1.2"
 	}
 }
