--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 	},
 	"dependencies": {
 		"fastify": "^5.6.1",
+		"fastify-plugin": "^5.1.0",
 		"mongoose": "^8.19.2",
-		"nodefling": "^1.0.0",
 		"pino": "^10.1.0",
 		"zod": "^4.1.12"
 	},
