--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"ci": "biome ci ."
 	},
 	"dependencies": {
+		"@fastify/cors": "^11.1.0",
+		"better-auth": "^1.3.34",
 		"fastify": "^5.6.1",
 		"fastify-plugin": "^5.1.0",
 		"mongoose": "^8.19.2",
