--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 		"ci": "biome ci ."
 	},
 	"dependencies": {
+		"@fastify/cookie": "^11.0.2",
 		"@fastify/cors": "^11.1.0",
-		"better-auth": "^1.3.34",
+		"bcryptjs": "^3.0.2",
 		"fastify": "^5.6.1",
 		"fastify-plugin": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.19.2",
 		"pino": "^10.1.0",
 		"zod": "^4.1.12"
