--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
 	"scripts": {
 		"dev": "node --env-file=.development.env --watch --watch-preserve-output server.js",
 		"start": "node --env-file=.production.env server.js",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:ui": "vitest --ui",
+		"test:coverage": "vitest run --coverage",
 		"prepare": "lefthook install",
 		"format": "biome format --write .",
 		"lint": "biome lint --write .",
@@ -25,7 +29,12 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.2",
+		"@vitest/coverage-v8": "^4.0.6",
+		"@vitest/ui": "4.0.6",
 		"lefthook": "^2.0.2",
-		"pino-pretty": "^13.1.2"
+		"mongodb-memory-server": "^10.3.0",
+		"pino-pretty": "^13.1.2",
+		"supertest": "^7.1.4",
+		"vitest": "^4.0.6"
 	}
 }
