--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"@fastify/cookie": "^11.0.2",
 		"@fastify/cors": "^11.1.0",
+		"@upstash/redis": "^1.35.6",
 		"bcryptjs": "^3.0.2",
 		"fastify": "^5.6.1",
 		"fastify-plugin": "^5.1.0",
